# accessibility-checker

./: .gitignore  README.md  accessibility-checker.spec  build.bat  main.py  pyproject.toml  sitecustomize.py
.github/: workflows
.github/workflows/: build.yml
browser/: exceptions.py  fetcher.py
report_maker/: __init__.py  console.py  file_export.py  html.py  json.py  pdf.py  report.py  report_template.html
rules/: __init__.py  audio_control.py  autocomplete.py  base.py  button_accessibility.py  change_on_request.py  character_key_shortcuts.py  document_title.py  focus_visible.py  headings_hierarchy.py  html_lang.py  img_alt_text.py  keyboard_focus_order.py  labels_or_instructions.py  link_accessibility.py  motion_actuation.py  multiple_ways.py  on_input.py  orientation.py  reflow.py  resize_text.py  section_headings.py  status_messages.py
